syntax = "proto3";
package stride.claim;

import "gogoproto/gogo.proto";

option go_package = "github.com/Stride-Labs/stride/v4/x/claim/types";

enum Action {
  option (gogoproto.goproto_enum_prefix) = false;

  ACTION_FREE = 0;
  ACTION_LIQUID_STAKE = 1;
  ACTION_DELEGATE_STAKE = 2;
}

// A Claim Records is the metadata of claim data per address
message ClaimRecord {
  // airdrop identifier
  string airdrop_identifier = 1
      [ (gogoproto.moretags) = "yaml:\"airdrop_identifier\"" ];

  // address of claim user
  string address = 2 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // weight that represent the portion from total allocation
  string weight = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"weight\""
  ];

  // true if action is completed
  // index of bool in array refers to action enum #
  repeated bool action_completed = 4
      [ (gogoproto.moretags) = "yaml:\"action_completed\"" ];
}